--- a/app/[locale]/globals.css
+++ b/app/[locale]/globals.css
@@ -118,5 +118,14 @@
   }
   body {
     @apply bg-background text-foreground;
+    /* globals.css or inside a component CSS file */
   }
+}
+
+.custom-scroll::-webkit-scrollbar {
+  width: 6px;
+}
+.custom-scroll::-webkit-scrollbar-thumb {
+  background-color: #d1d5db;
+  border-radius: 4px;
 }
