--- a/app/[locale]/globals.css
+++ b/app/[locale]/globals.css
@@ -129,3 +129,13 @@
   background-color: #d1d5db;
   border-radius: 4px;
 }
+/* Hide scrollbar for Chrome, Safari and Opera */
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.scrollbar-hide {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
