--- a/app/[locale]/globals.css
+++ b/app/[locale]/globals.css
@@ -118,7 +118,23 @@
   }
   body {
     @apply bg-background text-foreground;
-    /* globals.css or inside a component CSS file */
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+    overflow-y: scroll; /* Keeps layout consistent even with no visible bar */
+  }
+
+  body::-webkit-scrollbar {
+    display: none; /* Chrome, Safari and Opera */
+  }
+
+  html {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+    overflow-y: scroll;
+  }
+
+  html::-webkit-scrollbar {
+    display: none; /* Chrome, Safari and Opera */
   }
 }
 
